Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28409 Average throughput in YCSB workload A dropped in Vulcan by more than 10%
  3. MB-28777

KV-Engine shouldn't unconditionally store compressed docs below a given compression ratio

    XMLWordPrintable

Details

    Description

      When handling incoming compressed documents, KV-Engine shouldn't keep them as compressed if the space saving (compression ratio) is less than some threshold.

      Given that KV-Engine decompresses anyways to check for JSON, we will know how big the compressed & uncompressed sizes are.

      (See parent MB for background / discussion on this).

      Attachments

        For Gerrit Dashboard: MB-28777
        # Subject Branch Project Status CR V

        Activity

          People

            sriram Sriram Ganesan (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty