MB-28777: Apply min_compression_ratio in ItemCompressorTask

Documents whose uncompressed size vs compressed size exceeds the
configured minimum compression ratio for the bucket will be
stored as uncompressed for front-end workloads. Apply the same
for items compressed by the item compressor task

Change-Id: I4043aab6a920cac99d4de944342a6a2df1a125e5
Reviewed-on: http://review.couchbase.org/94183
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Build Bot <build@couchbase.com>